--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,10 @@ dynamic = ["version"]
 
 [tool.setuptools]
 script-files = ["honestbt"]
+
+[tool.black]
+line-length = 132
+
+# https://pypi.org/project/Flake8-pyproject/
+[tool.flake8]
+max-line-length = 132
