--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+# SPDX-PackageName: honestbt
+# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
+# SPDX-PackageDownloadLocation: https://github.com/rfinnie/honestbt
+# SPDX-FileComment: pyproject configs
+# SPDX-FileCopyrightText: © 2025 Ryan Finnie <ryan@finnie.org>
+# SPDX-License-Identifier: MPL-2.0
 [project]
 name = "honestbt"
 authors = [
