--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,6 @@
+# SPDX-PackageName: honestbt
+# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
+# SPDX-PackageDownloadLocation: https://github.com/rfinnie/honestbt
 # SPDX-FileComment: tox.ini defaults
 # SPDX-FileCopyrightText: © 2026 Ryan Finnie <ryan@finnie.org>
 # SPDX-License-Identifier: MPL-2.0
